--- a/analyzers/Yara/Dockerfile
+++ b/analyzers/Yara/Dockerfile
@@ -10,6 +10,7 @@ RUN apk add --no-cache gcc musl-dev
 LABEL author="Nils Kuhnert, CERT-Bund" \
       description="Check files against YARA rules." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="Yara" \
       url="https://github.com/BSI-CERT-Bund/cortex-analyzers" \
       vendor="TheHive" \
